--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,7 @@ runs:
   env:
     galaxy_api_key: ${{ inputs.galaxy_api_key }}
     git_branch: ${{ inputs.git_branch }}
+    path: ${{ inputs.path }}
 
 branding:
   icon: play  
