Update yamllint workflow to use latest Ubuntu and actions

--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -5,8 +5,8 @@ on:
   workflow_dispatch:
 jobs:
   yamllint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v6
       - name: yamllint
         uses: ibiqlik/action-yamllint@v3
